# pnm-ice

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/pnm_ice/: Adsorption.py  BoundaryConditions.py  Calibration.py  IO.py  Interpolation.py  Miscellaneous.py  NumericalDifferentiation.py  Operators.py  Reactions.py  TaylorArisDispersion.py  ToolSet.py  __init__.py
src/pnm_ice/models/: const_spheres_and_cylinders.py
tests/: test_Adsorption.py  test_AdsorptionConvection.py  test_Calibration.py  test_Convection.py  test_Diffusion.py  test_DiffusionConvection.py  test_DiluteFlow.py  test_MassTransfer.py  test_Miscellaneous.py  test_NumericalDifferentiation.py  test_Operators_ddt.py  test_Operators_gradient_delta.py  test_Operators_sum.py  test_Outflow_Convection.py  test_RateBC_Convection.py  test_Reactions.py  test_TaylorArisDispersion.py  test_VariableBC.py
